@@ -3921,6 +3921,11 @@ enum : uint16_t
     STR_SCENARIO_CATEGORY_UCES = 6530,
     STR_UCES_TM = 6531,
     STR_UCES_KD = 6532,
+
+    STR_EXCITEMENT_FACTOR_NEGATIVE = 6533,
+    STR_INTENSITY_FACTOR_NEGATIVE = 6534,
+    STR_NAUSEA_FACTOR_NEGATIVE = 6535,
+
     // Have to include resource strings (from scenarios and objects) for the time being now that language is partially working
     /* MAX_STR_COUNT = 32768 */ // MAX_STR_COUNT - upper limit for number of strings, not the current count strings
 };
